# Sentiment-Analysis

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  FileDb.h  FileReader.h  MemoryDb.h  main.cpp
include/NLP/: Database.h  NLP.h  StringUtils.h
sentiment/: negative.txt  positive.txt
src/: CMakeLists.txt
src/NLP/: NLP.cpp  StringUtils.cpp
tests/: CMakeLists.txt  TestDb.h  test.cpp
